@@ -25,6 +25,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #20320: select.select() and select.kqueue.control() now round the
+  timeout aways from zero, instead of rounding towards zero.
+
 - Issue #20616: Add a format() method to tracemalloc.Traceback.
 
 - Issue #19744: the ensurepip installation step now just prints a warning to
